src/dotnet/UI.Blazor/Components/SideNav/side-nav.css
.side-nav {
    @apply fixed md:static;
    @apply z-60 left-0;
    @apply h-full w-full;
    @apply text-02 bg-02;
    @apply top-0 bottom-0;
    @apply transition-transform duration-200 ease-out;
    transform: none;
    touch-action: pan-y;
}

.side-nav.side-nav-dragging {
    @apply transition-none;
}

/* Left SideNav */
.side-nav.side-nav-left {
    @apply md:w-110;
}
body.wide .side-nav.side-nav-left.closed {
    @apply hidden;
}
body.narrow .side-nav.side-nav-left.closed {
    transform: translate3d(-100%, 0, 0);
}

/* Right SideNav */
.side-nav.side-nav-right {
    @apply md:w-80;
}
body.wide .side-nav.side-nav-right.closed {
    @apply hidden;
}
body.narrow .side-nav.side-nav-right.closed {
    transform: translate3d(100%, 0, 0);
}

/* If one SideNav is open, the other one should be hidden to prevent its pull */
body.narrow:has(.side-nav.side-nav-left.open) .side-nav.side-nav-right {
    @apply hidden;
}
body.narrow:has(.side-nav.side-nav-right.open) .side-nav.side-nav-left {
    @apply hidden;
}
/* This rule prioritizes left SideNav over the right one when both are open */
body.narrow:has(.side-nav.side-nav-right.open) .side-nav.side-nav-left.open {
    @apply hidden;
}

/* Drawer */
.side-nav .side-nav-drawer {
    @apply fixed;
    @apply top-14 bottom-14 w-0;
    @apply bg-transparent;
}
.side-nav.side-nav-left .side-nav-drawer {
    @apply -right-0;
}
.side-nav.side-nav-right .side-nav-drawer {
    @apply -left-0
}

